gcc/testsuite/g++.dg/inherit/union2.C
struct A { };
union U : A { };  // { dg-error "derived union 'U' invalid" }
U u;
